修复登录校验bug

--- a/includes/head.html
+++ b/includes/head.html
@@ -26,7 +26,7 @@
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#">销售管理<b class="caret"></b></a>
 									<ul class="dropdown-menu">
 										<li>
-											<a href="#">下单</a>
+											<a href="/HK/admin/XiaoShouGuanLi/XiaoShouDan/XiaDan.php">下单</a>
 										</li>
 										<li>
 											<a href="#">退货</a>
@@ -64,6 +64,17 @@
 										</li>
 										<li>
 											<a href="#">退货</a>
+										</li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown" href="#">客户管理<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li>
+											<a href="/HK/admin/KeHuGuanLi/huifang.php">客户回访查询</a>
+										</li>
+										<li>
+											<a href="#">客户资料录入</a>
 										</li>
 									</ul>
 								</li>
