--- a/includes/head.html
+++ b/includes/head.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap-dropdown.js"></script>
+	<script type="text/javascript" src="bootstrap/js/jquery-session.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -19,7 +20,7 @@
 			<div class="navbar">
 				<div class="navbar-inner">
 					<div class="container-fluid">
-						<a class="btn btn-navbar" data-target=".navbar-responsive-collapse" data-toggle="collapse"></a> <a class="brand" href="#">豪客工艺</a>
+						<a class="btn btn-navbar" data-target=".navbar-responsive-collapse" data-toggle="collapse"></a> <a class="brand" href="/HK">豪客工艺</a>
 						<div class="nav-collapse collapse navbar-responsive-collapse">
 							<ul class="nav">
 								<li class="dropdown">
@@ -74,21 +75,19 @@
 											<a href="/HK/admin/KeHuGuanLi/huifang.php">客户回访查询</a>
 										</li>
 										<li>
-											<a href="#">客户资料录入</a>
+											<a href="/HK/admin/KeHuGuanLi/kehuinfo.php">客户资料录入</a>
 										</li>
 									</ul>
 								</li>
-							</ul>
-							<ul class="nav pull-right">
 								<li>
-									<a href="#">登录</a>
+								<form method="post" id="logout" action="">
+								<input type="hidden" name="action" value="logout" />
+							</form>
 								</li>
 							</ul>
-							<ul class="nav pull-right">
-								<li>
-									<a href="#">退出</a>
-								</li>
-							</ul>
+							<div id="nav">
+							<ul class="nav pull-right"><li><a href="/HK">登录</a></li></ul>
+							</div>
 						</div>
 						
 					</div>
