添加修改客户信息

--- a/includes/head.html
+++ b/includes/head.html
@@ -77,6 +77,9 @@
 										<li>
 											<a href="/HK/admin/KeHuGuanLi/kehuinfo.php">客户资料录入</a>
 										</li>
+										<li>
+											<a href="/HK/admin/KeHuGuanLi/modifyinfo.php">修改客户资料</a>
+										</li>
 									</ul>
 								</li>
 								<li>
