添加产品销售查询功能

--- a/includes/head.html
+++ b/includes/head.html
@@ -33,7 +33,7 @@
 											<a href="#">退货</a>
 										</li>
 										<li>
-											<a href="#">销售产品查询</a>
+											<a href="/HK/admin/XiaoShouGuanLi/chanpinsale.php">销售产品查询</a>
 										</li>
 										<li>
 											<a href="#">销售客户查询</a>
